deployment.yaml
apiVersion: apps/v1
kind: Deployment  
metadata: # Dictionary
  name: meu-app
spec: # Dictionary
  replicas: 2
  selector: 
    matchLabels: 
      app: meu-app1
  template:
    metadata: # Dictionary
      name: meu-app1-pod
      labels:
        app: meu-app1 # Key Value Pairs   
    spec:
      containers: # List
        - name: meu-container
          image: ghcr.io/stacksimplify/kubenginx:1.0.0
          ports: 
            - containerPort: 80          
          resources:
            requests:
              memory: "5Mi" # 128 MebiByte is equal to 135 Megabyte (MB)
              cpu: "25m" # `m` means milliCPU
            limits:
              memory: "50Mi"
              cpu: "50m"  # 1000m is equal to 1 VCPU core
