service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
spec:
  type: LoadBalancer
  selector:
    app: meu-app1
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
